src/index.scss
@import url("https://fonts.googleapis.com/css2?family=Andika:ital,wght@0,400;0,700;1,400;1,700&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");

$color1: #222831;
$color2: #30475e;
$color3: #f05454;
$color4: #dddddd;
$border: 0.2rem solid $color2;
$border_radius: 0.5rem;
$default_font: 2.5rem;
$transition: all 0.3s ease-in-out;

@mixin bgEffect {
    position: relative;
    cursor: pointer;
    color: $color3;
    z-index: 1;
    overflow: hidden;
    &:hover {
        color: $color4;
    }
    &::after,
    &::before {
        transition: $transition;
        z-index: -1;
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        content: "";
        background-color: $color3;
    }
    &::before {
        top: -50%;
        left: -100%;
    }
    &::after {
        top: 50%;
        left: 100%;
    }
    &:hover {
        &:before,
        &:after {
            left: 0;
        }
    }
}

html {
    font-size: 62.5%;
}

* {
    padding: 0;
    margin: 0;
    top: 0;
    left: 0;
    box-sizing: border-box;
    font-family: "Poppins", sans-serif;
    color: $color4;
    font-size: $default_font;
}

h1 {
    font-size: $default_font * 2;
    color: $color3;
}

html,
body,
#root,
.App {
    height: 100%;
}

#root {
    width: 100%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    position: relative;
    background-color: $color1;
    z-index: 0;
}

.flex {
    display: flex;
    justify-content: center;
    align-items: center;
}

.flex_c {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

section {
    margin: 1rem;
    display: flex;
    align-items: center;
    flex-direction: column;
    padding: 1rem;
    width: 70%;
    border: $border;
}

.full_fit {
    width: 100%;
    min-height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
}

button {
    background-color: $color2;
    padding: 1rem;
    border-radius: $border_radius;
    border: 3px solid $color3;
}

@media only screen and (max-width: 1000px) {
    html {
        font-size: 57%;
    }
}

@media only screen and (max-width: 850px) {
    html {
        font-size: 51%;
    }
    section {
        width: 90%;
    }
    .arrow {
        display: none;
    }
}

@media only screen and (max-width: 620px) {
    html {
        font-size: 40%;
    }
}

:export {
    color1: $color1;
    color2: $color2;
    color3: $color3;
    color4: $color4;
}

::-webkit-scrollbar {
    width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
    background: $color2;
}

/* Handle */
::-webkit-scrollbar-thumb {
    background: $color3;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
    background: #555;
}

